# whisper.cpp

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  pyproject.toml  taskfile.yaml  vcpkg.json
.github/workflows/: bindings-go.yml  bindings-ruby.yml  build.yml  docker.yml  examples.yml
examples/: CMakeLists.txt
examples/command/: CMakeLists.txt
examples/lsp/: CMakeLists.txt
examples/python/: test_whisper_processor.py  whisper_processor.py
examples/stream/: CMakeLists.txt
examples/talk/: CMakeLists.txt
examples/talk-llama/: CMakeLists.txt  eleven-labs.py
examples/wchess/wchess.cmd/: CMakeLists.txt
models/: .gitignore  convert-h5-to-coreml.py  convert-h5-to-ggml.py  convert-pt-to-ggml.py  convert-whisper-to-coreml.py  convert-whisper-to-openvino.py  download-ggml-model.cmd  ggml_to_pt.py
samples/: README.md
scripts/: bench.py
