[project]
name = "whisper-cpp"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Joel Van Eenwyk", email = "joel.vaneenwyk@gmail.com" }]
dependencies = []
readme = "README.md"
requires-python = ">= 3.11, < 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
ignore = [
    ".git/",
    ".build/",
    "build/",
    "dist/",
    "external/",
    "vcpkg_installed/",
    "external/",
]
packages = [
    "src/models/convert-h5-to-coreml.py",
    "src/models/convert-h5-to-ggml.py",
    "src/models/convert-pt-to-ggml.py",
    "src/models/convert-whisper-to-coreml.py",
    "src/models/convert-whisper-to-openvino.py",
    "src/models/ggml_to_pt.py",
    #"src/models/download-coreml-model.sh",
    #"src/models/download-ggml-model.cmd",
    #"src/models/download-ggml-model.sh",
    #"src/models/for-tests-ggml-base.bin",
    #"src/models/for-tests-ggml-base.en.bin",
    #"src/models/for-tests-ggml-large.bin",
    #"src/models/for-tests-ggml-medium.bin",
    #"src/models/for-tests-ggml-medium.en.bin",
    #"src/models/for-tests-ggml-small.bin",
    #"src/models/for-tests-ggml-small.en.bin",
    #"src/models/for-tests-ggml-tiny.bin",
    #"src/models/for-tests-ggml-tiny.en.bin",
    #"src/models/generate-coreml-interface.sh",
    #"src/models/generate-coreml-model.sh",
    #"src/models/README.md",
    #"src/models/requirements-coreml.txt",
    #"src/models/requirements-openvino.txt",
]
