[project]
name = "whisper-cpp"
version = "1.6.2"
description = "Add your description here"
authors = [{ name = "Joel Van Eenwyk", email = "joel.vaneenwyk@gmail.com" }]
dependencies = [
    "torch",
    "coremltools",
    "openai-whisper",
    "ane-transformers",
    "elevenlabs>=1.3.1",
]
readme = "README.md"
requires-python = ">=3.11, <4"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = [
    "src/models/convert-h5-to-coreml.py",
    "src/models/convert-h5-to-ggml.py",
    "src/models/convert-pt-to-ggml.py",
    "src/models/convert-whisper-to-coreml.py",
    "src/models/convert-whisper-to-openvino.py",
    "src/models/ggml_to_pt.py",
]

[tool.hatch.build.targets.sdist]
exclude = [
    ".build/",
    ".git/",
    ".mypy_cache/",
    ".task/",
    ".venv/",
    "build/",
    "dist/",
    "external/vcpkg/",
    "vcpkg_installed/",
]
ignore-vcs = true

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.4.10",
    "mypy>=1.10.0",
    "pylint>=3.2.3",
    "isort>=5.13.2",
    "uv>=0.2.13",
    "pyright>=1.1.368",
]

[[tool.rye.sources]]
name = "default"
url  = "https://pypi.org/simple"

[[tool.rye.sources]]
name = "torch-cpu"
url  = "https://download.pytorch.org/whl/cpu"

[[tool.rye.sources]]
name = "torch-cuda"
url  = "https://download.pytorch.org/whl/cu118"

[[tool.rye.sources]]
name = "torch-rocm"
url  = "https://download.pytorch.org/whl/rocm6.0"

[tool.ruff]
line-length = 120
exclude = [
    ".build/",
    ".git/",
    ".mypy_cache/",
    ".task/",
    ".venv/",
    "build/",
    "dist/",
    "external/vcpkg/",
    "vcpkg_installed/",
]
